--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="NameCalculator">
     <head>
-        <title>Hello Coursera</title>
+        <meta charset="utf-8">
+        <title>Name Calculator</title>
     </head>
     <body>
-        <h1>Hello Cousera Students</h1>
+        <h1>Name Calculator</h1>
+        <div ng-controller="NameCalculatorController">
+            <div>
+                Your name:
+                <input type="text" ng-model="name" ng-keyup="displayNumeric()">
+            </div>
+            <div>
+                Total numeric value of person's name is: {{totalValue}}
+            </div>
+        </div>
+
+        <script src="angular.min.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
